[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-version-control"
version = "0.1.0"
description = "A local-first CLI tool to version prompts, track metadata, diff versions, rollback, and export."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "pv contributors" }]
keywords = ["prompt", "version-control", "cli", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer>=0.9,<1",
    "rich>=13,<14",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2,<3",
    "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pv = "pv.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pv"]

[tool.hatch.build.targets.sdist]
include = ["src/pv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"

[tool.coverage.run]
source = ["pv"]

[tool.coverage.report]
show_missing = true
fail_under = 70
